# novarche_web

./: .env  Cargo.toml  README.md  diesel.toml  diesel.txt  up.txt
frontend/: angular.json  package.json
frontend/src/app/: app.component.html  app.module.ts
frontend/src/app/components/employees/: employees.component.html  employees.component.ts
frontend/src/app/components/persons/: persons.component.html  persons.component.ts
migrations/2021-07-02-214152_add_tables/: up.sql
migrations/2021-07-05-070128_add_tables/: down.sql  up.sql
migrations/2021-07-05-081046_add_tables/: down.sql  up.sql
migrations/2021-07-05-102633_add_tables/: down.sql  up.sql
migrations/2021-07-07-113753_add_tables/: down.sql
migrations/2021-07-08-074222_add_tables/: down.sql  up.sql
migrations/2021-07-10-080733_add_tables/: down.sql  up.sql
migrations/add_tables/: up.sql
src/: config.rs  connection.rs  main.rs  schema.rs  utils.rs
src/approvals/: approval_config.rs  approval_handlers.rs  approval_models.rs  mod.rs
src/auth/: auth_config.rs  auth_handlers.rs  auth_models.rs  mod.rs
src/employees/: employee_config.rs  employee_handlers.rs  employee_models.rs  mod.rs
src/gate_entries/: grn_config.rs  grn_handlers.rs  grn_models.rs  mod.rs
src/grades/: grade_config.rs  grade_handlers.rs  grade_models.rs  mod.rs
src/parts_master/: mod.rs  part_config.rs  part_handlers.rs  part_models.rs
src/person/: mod.rs  person_config.rs  person_handlers.rs  person_models.rs
src/users/: mod.rs  user_config.rs  user_handlers.rs  user_models.rs
