[package]
name = "novarche_web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
diesel = { version = "1.4.4", default-features = false, features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
bcrypt = "0.10"
r2d2 = "0.8"
futures = "0.3"
actix-identity = "0.3"